# Godot-PKN

./: .gitignore  LICENSE  README.md  analysis.md  key.tscn  pkarr.tscn  project.godot  rust.gdextension
pkarr/examples/: publish.rs
pkarr/godot/: Cargo.toml
pkarr/godot/examples/: control.gd  key.gd  key.tscn  main.gd  main.tscn  pkarr.gd  pkarr.tscn
pkarr/godot/examples/Nueva carpeta/: control.gd  key.gd  key.tscn  main.gd  main.tscn  pkarr.tscn  v_box_container.gd
pkarr/godot/src/: keytool.rs  lib.rs  pkarrgodot.rs  state.rs
