[package]
name = "libpkarr"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
godot = "0.4.2"
once_cell = "1.19.0"

##############  mi config key ######################################
bech32 = "0.9.1"
secp256k1 = { version = "0.27.0", features = ["rand"] }
hex = "0.4.3"
rand = "0.8.5"
rand_core = "0.6.4"
nostr = "0.19.0"

base32 = "0.5.1"
ed25519-dalek = { version = "2.1.1" }
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
#bech32 = "0.8"

pkarr = {  version = "5.0.0", features = ["full"] }

#pkarr = { path = "../../pkarr", features = ["keys"] }

simple-dns = "0.9.3"

tracing-subscriber = "0.3"
futures = "0.3"
#tokio = { version = "1", features = ["full"] }

#hex = "0.4"
#hex = "0.4.3"


# feat: relay dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
tokio = { version = "1.43.0", default-features = false, optional = true }
async-compat = { version = "0.2.4", optional = true }

# feat: lmdb-cache defendencies
heed = { version = "0.21.0", default-features = false, optional = true }
byteorder = { version = "1.5.0", default-features = false, optional = true }
page_size = { version = "0.6.0", optional = true }

# feat: tls
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
webpki = { package = "rustls-webpki", version = "0.102", optional = true }


[dev-dependencies]
anyhow = "1.0.95"
postcard = { version = "1.1.1", features = ["alloc"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rstest = "0.24.0"


clap = { version = "4.5.29", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
mainline = "5.4.0"
tokio-rustls = { version = "0.26.1", default-features = false }
axum = "0.8.1"
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]
